...

  @override
  Widget build(BuildContext context) {
    final theme = Theme.of(context);

    return Scaffold(
      key: const Key('homePage'),
      backgroundColor: theme.colorScheme.surface,
      appBar: AppBar(
        title: const Text('Home'),
        backgroundColor: theme.colorScheme.surface,
        elevation: 0,
        actions: [
...
